replace files with streams (input/output streams)